--- a/app/src/main/res/layout/activity_team_members.xml
+++ b/app/src/main/res/layout/activity_team_members.xml
@@ -49,7 +49,7 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_addmember"
+                android:src="@drawable/ic_add_member"
                 app:tint="?android:attr/iconTint"
                 android:visibility="visible"/>
 
@@ -107,7 +107,7 @@
                 android:layout_height="25dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:contentDescription="BackButton"
-                android:src="@drawable/ic_arrowback"
+                android:src="@drawable/ic_arrow_left"
                 android:scaleType="fitXY"
                 app:tint="?android:attr/iconTint"
                 android:layout_margin="15dp"
