--- a/app/src/main/res/layout/activity_app_setings.xml
+++ b/app/src/main/res/layout/activity_app_setings.xml
@@ -122,7 +122,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
-                    android:src="@drawable/ic_notificationfull"
+                    android:src="@drawable/ic_notification_filled"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
@@ -333,7 +333,7 @@
             android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
-            android:src="@drawable/ic_arrowback"
+            android:src="@drawable/ic_arrow_left"
             android:scaleType="fitXY"
             app:tint="?android:attr/iconTint"
             android:layout_margin="15dp"
