--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,52 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".home.HelpActivity">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".home.HelpActivity">
+
+
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:layout_marginTop="52dp">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/logo_transparent_globe"
+                    android:layout_marginVertical="10dp"/>
+
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="  Sabemos que, às vezes, dúvidas ou dificuldades podem surgir. No Ecosynergy, estamos aqui para garantir que sua experiência com nossa plataforma de monitoramento ambiental sustentável seja a melhor possível.Sabemos que, às vezes, dúvidas ou dificuldades podem surgir. No Ecosynergy, estamos aqui para garantir que sua experiência com nossa plataforma de monitoramento ambiental sustentável seja a melhor possível."
+                    android:justificationMode="inter_word"
+                    android:layout_marginHorizontal="10dp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="14sp"
+                    android:layout_marginVertical="5dp"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="  Se você encontrar qualquer problema, precisar de orientações específicas ou apenas tiver uma pergunta, não hesite em entrar em contato com nossa equipe de suporte. Estamos prontos para atender suas necessidades e ajudá-lo a aproveitar ao máximo os recursos e benefícios do Ecosynergy."
+                    android:justificationMode="inter_word"
+                    android:layout_marginHorizontal="10dp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="14sp"
+                    android:layout_marginVertical="5dp"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Entre em contato conosco:"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="16sp"
+                    android:textColor="?android:attr/textColorPrimary"/>
+
+            <TextView
+                    android:id="@+id/txtEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="contato@ecosynergybr.com"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_marginHorizontal="15dp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:layout_marginBottom="5dp"
+                    android:focusable="true"
+                    android:clickable="true"
+                    android:background="?android:attr/selectableItemBackground"/>
+
+            <TextView
+                    android:id="@+id/txtNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+55 11 99023-8074"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_marginHorizontal="15dp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:layout_marginBottom="5dp"
+                    android:focusable="true"
+                    android:clickable="true"
+                    android:background="?android:attr/selectableItemBackground"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="  Nossa missão é oferecer soluções sustentáveis e práticas, e isso inclui um suporte eficiente e acessível para você. Não importa o tamanho do desafio, estamos aqui para ajudar! Agradecemos por confiar no Ecosynergy e contar conosco em sua jornada rumo a um futuro mais sustentável."
+                    android:justificationMode="inter_word"
+                    android:layout_marginHorizontal="10dp"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="14sp"
+                    android:layout_marginVertical="5dp"/>
+
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:layout_gravity="top"
-        android:background="?android:attr/colorBackground">
-
-        <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:contentDescription="BackButton"
-            android:src="@drawable/ic_arrowback"
-            android:scaleType="fitXY"
-            app:tint="?android:attr/iconTint"
-            android:layout_margin="15dp"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"/>
-
-        <TextView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:text="Ajuda"
-            android:textAlignment="center"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginEnd="60dp"
-            />
+            android:orientation="vertical"
+            android:layout_gravity="top">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:layout_gravity="top"
+                android:background="?android:attr/colorBackground">
 
-    </LinearLayout>
+            <ImageButton
+                    android:id="@+id/btnBack"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="BackButton"
+                    android:src="@drawable/ic_arrow_left"
+                    android:scaleType="fitXY"
+                    app:tint="?android:attr/iconTint"
+                    android:layout_margin="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:clickable="true"
+                    />
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="Ajuda"
+                    android:textAlignment="center"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="55dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        </LinearLayout>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="?android:attr/colorForeground"/>
 
     </LinearLayout>
 
