--- a/app/src/main/res/layout/create_team_layout.xml
+++ b/app/src/main/res/layout/create_team_layout.xml
@@ -26,7 +26,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center"
             app:tint = "?android:attr/iconTint"
-            android:src="@drawable/ic_addmember"/>
+            android:src="@drawable/ic_add_member"/>
 
 
     </LinearLayout>
