--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -145,17 +145,34 @@
 
             </LinearLayout>
 
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmerTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:layout_gravity="start"
+                    app:shimmer_auto_start="true"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:visibility="visible">
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/chart_shape"
+                        android:visibility="visible"
+                        android:backgroundTint="?attr/shimmerColor"/>
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
             <LinearLayout
                 android:id="@+id/linearTotal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="110dp"
                 android:orientation="vertical"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                    android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="20dp"
                 android:padding="10dp"
                 android:background="@drawable/no_ripple_bg"
-                android:visibility="visible">
+                android:visibility="gone">
 
 
                 <LinearLayout
@@ -198,7 +215,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                android:text="5322"
+                android:text="..."
                 android:textColor="?android:attr/textColorPrimary"
                 android:layout_marginStart="10dp"/>
 
@@ -207,7 +224,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="/15600"
+                android:text="/..."
                 android:textStyle="bold"
                 android:textColor="@color/greenDark"/>
 
@@ -222,15 +239,31 @@
                     android:textStyle="bold"
                     android:textColor="@color/greenDark"/>
 
-                <TextView
-                    android:id="@+id/txtPercentage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="34.1% do Total"
-                    android:layout_marginEnd="15dp"
-                    android:textStyle="bold"
-                    android:textColor="?android:attr/textColorPrimary"/>
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="25dp"
+                        android:orientation="horizontal"
+                        android:layout_marginEnd="15dp"
+                        android:layout_gravity="bottom"
+                        android:gravity="center">
+
+
+                    <ImageView
+                            android:id="@+id/imgPercentage"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:src="@drawable/ic_rise"
+                            app:tint="@color/red"
+                            android:visibility="gone"/>
+                    <TextView
+                            android:id="@+id/txtPercentage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="16sp"
+                            android:text="...%"
+                            android:textStyle="bold"
+                            android:textColor="?android:attr/textColorPrimary"/>
+                </LinearLayout>
 
             </LinearLayout>
 
